--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "A collection of handy tools",
   "main": "webpack.config.js",
   "dependencies": {
+    "mathjs": "^3.13.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "webpack": "^2.5.1"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "extract-text-webpack-plugin": "^2.1.0"
   },
   "scripts": {
